# MINTGGGameEngine

./: CMakeLists.txt  Doxyfile  README.md  library.properties
src/: ADCManager.cpp  ADCManager.h  AudioClip.cpp  AudioClip.h  AudioEngine.cpp  AudioEngine.h  Bitmap.cpp  Bitmap.h  Collider.cpp  Collider.h  Color.cpp  Color.h  GPIODevice.cpp  GPIODevice.h  GPIODeviceMCP2300X.cpp  GPIODeviceMCP2300X.h  GPIODeviceNative.cpp  GPIODeviceNative.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameObjectCollision.h  Globals.h  GravitySimulator.h  InputEngine.cpp  InputEngine.h  Log.cpp  Log.h  MCP2300XDevice.cpp  MINTGGGameEngine.h  MathUtils.cpp  MathUtils.h  RayCastResult.h  Screen.cpp  Screen.h  ScreenNull.h  ScreenST7735.cpp  ScreenST7735.h  ScreenST7735_Arduino.cpp  (+9 more)
src/audio/: AudioClip.cpp  AudioClip.h  AudioEngine.cpp  AudioEngine.h  MIDILoader.cpp  MIDILoader.h
src/audio/internal/: emidi_hal_mintgggameengine.cpp
src/core/: DefaultEngine.cpp  DefaultEngine.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h
src/graphics/: Bitmap.cpp  Bitmap.h  Color.cpp  Color.h  Font.cpp  Font.h  ImageLoader.cpp  ImageLoader.h  Screen.cpp  Screen.h  ScreenHAGL.cpp  ScreenHAGL.h  ScreenNull.cpp  ScreenNull.h  ScreenST7735.cpp  ScreenST7735.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h
src/input/: InputEngine.cpp  InputEngine.h
src/network/: NetworkEngine.cpp  NetworkEngine.h
src/physics/: Collider.cpp  Collider.h  GameObjectCollision.cpp  GameObjectCollision.h  GravitySimulator.cpp  GravitySimulator.h
src/platform/: ADCManager.cpp  ADCManager.h  GPIODevice.h  GPIODeviceMCP2300X.cpp  GPIODeviceMCP2300X.h  GPIODeviceNative.cpp  GPIODeviceNative.h  MCP2300XDevice.cpp  MCP2300XDevice.h
src/storage/: BufferedReader.cpp  BufferedReader.h  File.cpp  File.h  FileReader.cpp  FileReader.h  MemReader.cpp  MemReader.h  Reader.cpp  Reader.h  StorageEngine.cpp  StorageEngine.h
src/util/: GameObjectStreamer.cpp  GameObjectStreamer.h  Log.cpp  Log.h  MathUtils.cpp  MathUtils.h  RayCastResult.cpp  RayCastResult.h  Util.cpp  Util.h  Vec2.cpp  Vec2.h  WorkerTask.cpp  WorkerTask.h
